--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ Cody's Coursera Webgl Homework
     <ul>
       <li> Week 1
         <ul> 
-          <li>a <a href="week1/triangle.html"> Traingle</a> or 2</li>
+          <li>a <a href="week1/triangle.html"> Traingle</a></li>
+          <li>a <a href="week1/triangle2.html"> Sierpinski's Traingle</a></li>
         </ul>
       </li>
       <li> Week 2
