--- a/week1/triangle2.html
+++ b/week1/triangle2.html
@@ -22,9 +22,9 @@
     void main() {
       float dist = 1.0-sqrt(vPosition.x*vPosition.x + vPosition.y*vPosition.y);
       //gl_Position = vec4(vPosition, 1.0) + vec4(vPosition.y*cos(dist*theta), vPosition.x*sin(dist*theta), 0.0, 0.0); //this is cool
-      mat2 rot = rotate(dist*theta);
-      vec2 rotty =  (1.0+theta/12.0)*rot*vec2(vPosition.x, vPosition.y);
-      gl_Position = vec4(rotty, 0.0,1.0);
+      mat2 rotM = rotate(dist*theta);
+      vec2 rotted =  rotM*vec2(vPosition.x, vPosition.y);
+      gl_Position = vec4(rotted, 0.0,1.0);
       color = vColor;
     }
   </script>
