--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@ Cody's Coursera Webgl Homework
       <li> Week 1
         <ul> 
           <li>a <a href="week1/triangle.html"> Traingle</a></li>
-          <li>a <a href="week1/triangle2.html"> Sierpinski's Traingle</a></li>
         </ul>
       </li>
       <li> Week 2
         <ul> 
-          <li> du du duuuu</li>
+          <li>a <a href="week1/triangle2.html"> Sierpinski's Gasket</a> now with extra wobble.</li>
         </ul>
       </li>
     </ul>
