--- a/week1/triangle2.html
+++ b/week1/triangle2.html
@@ -8,7 +8,7 @@
   
   <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec3 vPosition;
-    attribute vec4 vColor;
+    attribute vec3 vColor;
     uniform float theta;
     varying vec4 color;
 
@@ -24,8 +24,8 @@
       //gl_Position = vec4(vPosition, 1.0) + vec4(vPosition.y*cos(dist*theta), vPosition.x*sin(dist*theta), 0.0, 0.0); //this is cool
       mat2 rotM = rotate(dist*theta);
       vec2 rotted =  rotM*vec2(vPosition.x, vPosition.y);
-      gl_Position = vec4(rotted, 0.0,1.0);
-      color = vColor;
+      gl_Position = vec4(rotted, 0.0, 1.0);
+      color = vec4(vColor, 1.0);
     }
   </script>
 
