--- a/week1/sand.html
+++ b/week1/sand.html
@@ -50,6 +50,7 @@ vec4 number2Color( float n) {
 
 void main() 
 { 
+    float MAX_H = 64.0;
     float d = 1.0/512.0;
     float x = fTexCoord.x;
     float y = fTexCoord.y;
@@ -63,25 +64,25 @@ void main()
     float lN = color2number(l);
     float rN = color2number(r);
     float me = color2number(center);
-    if(me >= 8.0){//topple pile
-      me = me - 8.0;
+    if(me >= MAX_H){//topple pile
+      me = me - MAX_H;
     }
     // add toppled neighbors
-    if(upN > 8.0) {
-      me = me + 2.0;
+    if(upN >= MAX_H) {
+      me = me + MAX_H/4.0;
     }
-    if(dnN > 8.0) {
-      me = me + 2.0;
+    if(dnN >= MAX_H) {
+      me = me + MAX_H/4.0;
     }
-    if(lN > 8.0) {
-      me = me + 2.0;
+    if(lN >= MAX_H) {
+      me = me + MAX_H/4.0;
     }
-    if(rN > 8.0) {
-      me = me + 2.0;
+    if(rN >= MAX_H) {
+      me = me + MAX_H/4.0;
     }
     if(x > (0.5-d) && x < 0.5 && y > (0.5-d) && y<0.5){
-      if( me < 4.0){
-        me = me + 1.0;
+      if( me <= 1.0){
+        me = me + MAX_H/4.0;
       }
     }
     gl_FragColor = number2Color(me);
