--- a/week1/sand.html
+++ b/week1/sand.html
@@ -20,8 +20,6 @@ fTexCoord = vTexCoord;
 
 }
 </script>
-
-
 <script id="fragment-shader2" type="x-shader/x-fragment">
 
 precision highp float;
@@ -87,7 +85,7 @@ void main()
     // add more particles to the middle
     // 
     if( placementLoc.x > 0.0 && placementLoc.y > 0.0){
-      if(x > (placementLoc.x-d) && x < placementLoc.x && y > (placementLoc.y-d) && y<placementLoc.y){
+      if(x > (placementLoc.x-0.6*d) && x < placementLoc.x && y > (placementLoc.y-0.6*d) && y<placementLoc.y){
         me = me + 1.0;
       }
     }
@@ -95,6 +93,8 @@ void main()
 } 
 
 </script>
+
+
 
 
 
@@ -113,9 +113,6 @@ void main() {
     gl_Position = vec4(bla.xy,0.0,1.0);
 } 
 </script>
-
-
-
 <script id="fragment-shader3" type="x-shader/x-fragment">
 //
 //  also for displaying to the screen
@@ -148,7 +145,7 @@ void main() {
     vec4 center = texture2D( texture, vec2(x, y));
     float me = color2number(center);
     //me = max(me,512.0);
-    vec3 col2 = hsv2rgb(vec3(me/256.0, 1.0, me/64.0));
+    vec3 col2 = hsv2rgb(vec3(me/64.0, 1.0, me/64.0));
     gl_FragColor = vec4(col2, 1.0);
 }
 </script>
