--- a/week1/triangle2.html
+++ b/week1/triangle2.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <script src="triangle2.js"></script>
   <script type="text/javascript" src="../Common/webgl-utils.js"></script>
   <script type="text/javascript" src="../Common/initShaders.js"></script>
   <script type="text/javascript" src="../Common/MV.js"></script>
-  
+  <script src="triangle2.js"></script>
   <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec3 vPosition;
     attribute vec3 vColor;
@@ -40,6 +39,9 @@
  
   </head>
   <body>
+  Sierpinski iterations: <input type=range min=0 max=9 step=1 value=4 onchange="GLtriangle.updateVertices(Number(this.value))"></input>
+  angle: <input type=range min=-6 max=6 step=0.01 value=0 oninput="GLtriangle.updateTheta(Number(this.value))"></input>
+
   <canvas id="can" width=800 height=800></canvas>
   </body>
    <script>
