--- a/week1/sand.html
+++ b/week1/sand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-
+<title>Abelian sand pile</title>
 
 <script id="vertex-shader2" type="x-shader/x-vertex">
 //
@@ -53,7 +53,7 @@ vec4 number2Color( float n) {
 void main() 
 { 
     float MAX_H = 8.0;
-    float d = 1.0/256.0;
+    float d = 1.0/512.0;
     float x = fTexCoord.x;
     float y = fTexCoord.y;
     vec4 up = texture2D( texture, vec2(x, y-d));
@@ -97,8 +97,6 @@ void main()
 
 
 
-
-
 <script id="vertex-shader3" type="x-shader/x-vertex">
 //
 // This shader is for displaying to the screen
@@ -106,12 +104,12 @@ void main()
 attribute vec4 vPosition;
 attribute vec2 vTexCoord;
 varying vec2 fTexCoord;
+uniform mat4 vProjection;
 
 void main() {
-    float scale = 1.1; //note put in uniform
-    vec4 bla = scale*vPosition; //scale
+    vec4 bla = vProjection*vPosition; 
     fTexCoord = vTexCoord;
-    gl_Position = vec4(bla.xy,0.0,1.0);
+    gl_Position = bla;
 } 
 </script>
 <script id="fragment-shader3" type="x-shader/x-fragment">
@@ -145,7 +143,6 @@ void main() {
     float y = fTexCoord.y;
     vec4 center = texture2D( texture, vec2(x, y));
     float me = color2number(center);
-    //me = max(me,256.0);
     vec3 col2 = hsv2rgb(vec3(0.5+me/16.0, 1.0, me/4.0));
     gl_FragColor = vec4(col2, 1.0);
 }
@@ -159,8 +156,14 @@ void main() {
 <script type="text/javascript" src="sand.js"></script>
 
 <body>
-<canvas id="gl-canvas" width="256" height="256">
+zoom: <input type=range min=1 max=30 step=0.1 value=1 oninput="projectionMatrix[0][0] = projectionMatrix[1][1] =  Number(this.value)"></input>
+speed: <input type=range min=1 max=1000 step=1 value=1 oninput="speedMult =  Number(this.value)"></input>
+
+<br>
+<canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
+<br>
+<a href="https://en.wikipedia.org/wiki/Abelian_sandpile_model">Abelian sand pile</a> calulated in webgl shaders. 
 </body>
 </html>
