--- a/week1/triangle2.html
+++ b/week1/triangle2.html
@@ -39,7 +39,7 @@
  
   </head>
   <body>
-  Sierpinski iterations: <input type=range min=0 max=9 step=1 value=4 onchange="GLtriangle.updateVertices(Number(this.value))"></input>
+  Sierpinski iterations: <input type=range min=0 max=9 step=1 value=4 oninput="GLtriangle.updateVertices(Number(this.value))"></input>
   angle: <input type=range min=-6 max=6 step=0.01 value=0 oninput="GLtriangle.updateTheta(Number(this.value))"></input>
   <br>
   <canvas id="can" width=800 height=800></canvas>
