--- a/week1/sand.html
+++ b/week1/sand.html
@@ -2,7 +2,7 @@
 <html>
 
 <title>Abelian sand pile</title>
-
+<script src="../Common/analytics.js"></script>
 <script id="vertex-shader2" type="x-shader/x-vertex">
 //
 // for rendering to texture
