--- a/week1/triangle.html
+++ b/week1/triangle.html
@@ -5,7 +5,8 @@
   <script type="text/javascript" src="../Common/webgl-utils.js"></script>
   <script type="text/javascript" src="../Common/initShaders.js"></script>
   <script type="text/javascript" src="../Common/MV.js"></script>
-  
+  <script src="../Common/analytics.js"></script>
+
   <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec3 vPosition;
     attribute vec4 vColor;
