--- a/week4/particle2.html
+++ b/week4/particle2.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
+<script type="text/javascript" src="particle2shaders.js"></script>
 <script type="text/javascript" src="particle2.js"></script>
 
 <body>
