--- a/week4/particle2.html
+++ b/week4/particle2.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="particle2shaders.js"></script>
 <script type="text/javascript" src="particle2.js"></script>
 
-<body>
+<body style="background-color:black;">
 
 
 <br>
