--- a/week1/triangle2.html
+++ b/week1/triangle2.html
@@ -41,14 +41,22 @@
  
   </head>
   <body>
-  Subdivisions: <input type=range min=0 max=9 step=1 value=4 oninput="GLtriangle.updateVertices(Number(this.value))"></input>
-  <br>
-  Angle: <input type=range min=-6 max=6 step=0.01 value=0 oninput="GLtriangle.updateTheta(Number(this.value))"></input>
-  <br>
-  <input type="checkbox" name="fillHoles" value="fillHoles" onchange="GLtriangle.fillMesh=this.checked; GLtriangle.updateVertices();"> Fill holes <br>
-
-  <br>
+  <div style="float:right">
+    Cody Smith <br>
+    Interactive Computer Graphics with WebGL <br>
+    Assignment 1 <br>
+    July 2015 <br>
+  </div>
+  <div>
+    Subdivisions: <input type=range min=0 max=9 step=1 value=4 oninput="GLtriangle.updateVertices(Number(this.value))"></input>
+    <br>
+    Angle: <input type=range min=-6 max=6 step=0.01 value=0 oninput="GLtriangle.updateTheta(Number(this.value))"></input>
+    <br>
+    <input type="checkbox" name="fillHoles" value="fillHoles" onchange="GLtriangle.fillMesh=this.checked; GLtriangle.updateVertices();"> Fill holes <br>
+    <br>
+  </div>
   <canvas id="can" width=800 height=800></canvas>
+  <br>
   </body>
    <script>
     window.onload = GLtriangle.init()
