--- a/week4/draw.html
+++ b/week4/draw.html
@@ -26,6 +26,7 @@
   <br>
   <button onclick="painter.clear()">Clear</button>
   <br>
+  <input type="range" min=1 max=60 value=10 oninput="painter.lineWidth=Number(this.value)"> Brush Size</input>
   
 </div>
 <canvas id="gl-canvas" width="800" height="768" style=" border-style: solid; border-width: 5px;">
