--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ Cody's Coursera Webgl Homework
           <li>a <a href="week1/triangle2.html"> Sierpinski's Gasket</a> now with extra wobble.</li>
         </ul>
       </li>
+      <li> Week 4
+        <ul> 
+          <li>a <a href="week4/draw.html"> Drawing program</a></li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
