had to add behive again for the gh-pages branch

--- a/week4/draw.html
+++ b/week4/draw.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="../Common/MV.js"></script>
 <script type="text/javascript" src="drawShaders.js"></script>
 <script type="text/javascript" src="draw.js"></script>
-<script type="text/javascript" src="../libs/BeehivePicker/beehive_picker"></script>
+<script type="text/javascript" src="../libs/beehive_picker.js"></script>
 
 
 <body style="background-color:grey;">
