--- a/week4/draw.html
+++ b/week4/draw.html
@@ -3,6 +3,7 @@
 
 <title>Painter</title>
 
+<script src="../Common/analytics.js"></script>
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
