--- a/week4/draw.html
+++ b/week4/draw.html
@@ -30,6 +30,8 @@
   <br>
   Brush Size: <input type="range" min=1 max=60 value=10 oninput="painter.lineWidth=Number(this.value)"></input>
   <br>
+  opacity: <input type="range" min=0.1 max=1 value=1 step=0.001 oninput="painter.opacity=Number(this.value)"></input>
+  <br>
   <button onclick="painter.undo()">Undo</button>
   <button onclick="painter.clear()">Clear</button>
 
