--- a/weekX/hough.html
+++ b/weekX/hough.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<title>sobel filter</title>
+<title>hough transform</title>
 
 <!--<script src="../Common/analytics.js"></script>-->
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="../Common/MV.js"></script>
 <script type="text/javascript" src="sobelShaders.js"></script>
 <script type="text/javascript" src="sobel.js"></script>
+<script type="text/javascript" src="glHough.js"></script>
 
 
 <body style="background-color:grey;">
@@ -24,7 +25,7 @@
 
 <script type="text/javascript">
   window.onload = function() {
-    window.sob = new glSobel()
+    window.sob = new glHough()
     var img = new Image()
     img.onload = function(){
       sob.changeImage.bind(sob)(this)
