rendering to texture on hough

--- a/weekX/hough.html
+++ b/weekX/hough.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="../Common/MV.js"></script>
 <script type="text/javascript" src="sobelShaders.js"></script>
 <script type="text/javascript" src="sobel.js"></script>
-<script type="text/javascript" src="glHough.js"></script>
+<script type="text/javascript" src="hough.js"></script>
 
 
 <body style="background-color:grey;">
