fixed rotation. polymer is still being a piece of sh*t

--- a/week5/polymerBS.html
+++ b/week5/polymerBS.html
@@ -1,6 +1,6 @@
 <link rel="import" href="http://www.polymer-project.org/1.0/components/polymer/polymer.html">
-<!--<link rel="import" href="https://www.polymer-project.org/0.5/components/core-resizable/core-resizable.html">
--->
+<link rel="import" href="https://elements.polymer-project.org/bower_components/iron-list/iron-list.html">
+
 
 <polymer-element name="shape-menu">  
   <template>
