--- a/week5/polymerBS.html
+++ b/week5/polymerBS.html
@@ -1,13 +1,23 @@
-<link rel="import" href="http://www.polymer-project.org/1.0/components/polymer/polymer.html">
-<link rel="import" href="https://elements.polymer-project.org/bower_components/iron-list/iron-list.html">
+<link rel="import" href="http://www.polymer-project.org/0.5/components/polymer/polymer.html">
+<link rel="import" href="./polymerSucks.html">
 
 
 <polymer-element name="shape-menu">  
   <template>
+    <button onclick="glShapes.addShape('sphere')">add sphere</button>
+    <button onclick="glShapes.addShape('cone')">add cone</button>
+    <button onclick="glShapes.addShape('cylinder')">add cylinder</button>
+    <button onclick="glShapes.addShape('shell')">add shell</button>
+    <button onclick="glShapes.addShape('leaf')">add leaf</button>
+
     <template repeat="&#123;{ letter in shapes }}">
       <div>
+      <template>
+        <div>Am I actually suprised this won't work? No. nothing in polymer works right</div>
+      </template>
+      <count-button></count-button>
       &#123;{ letter.name }}
-      <ul>
+      <ul style="display:{{letter.selected | fooBar}}" >
         <li>rotation: <input oninput="glShapes.render()" type="range" value="{{letter.rotation}}" min=0 max=360></li>
         <li>scaleX: <input oninput="glShapes.render()" type="range" value="{{letter.scale[0]}}" min=0.1 max=3 step=0.000001></li>
         <li>scaleY: <input oninput="glShapes.render()" type="range" value="{{letter.scale[1]}}" min=0.1 max=3 step=0.000001></li>
@@ -30,7 +40,18 @@
         //this.dung = glShapes.shapes 
         test1()
         this.shapes = glShapes.shapes
-      }
+      },
+      selectShape: function(type) {
+        console.log('add')
+      },
+      fooBar: function(value) {
+        console.log('value', value)
+        if (!value) {
+          return "none";
+        }
+        return "block"
+      },
+      increment: function(e, detail, sender) { console.log('funky',e,detail,sender) }
     });
   </script>
 </polymer-element>  
