--- a/week5/polymerBS.html
+++ b/week5/polymerBS.html
@@ -15,7 +15,8 @@
            {{ curr.name }}
          </section>
         <ul style="display:{{curr.selected | fooBar}}" >
-          <li>rotation: <input oninput="glShapes.render()" type="range" value="{{curr.rotation}}" min=0 max=360></li>
+          <li>rotation: <input oninput="glShapes.render()" type="range" value="{{curr.rotation}}" min=-360 max=360>
+            {{curr.rotation}}</li>
           <li>scaleX: <input oninput="glShapes.render()" type="range" value="{{curr.scale[0]}}" min=0.1 max=3 step=0.000001>
             {{curr.scale[0]}}</li>
           <li>scaleY: <input oninput="glShapes.render()" type="range" value="{{curr.scale[1]}}" min=0.1 max=3 step=0.000001>
@@ -79,6 +80,7 @@
               this.shapes.splice(i, 1)
             }
           }
+          if(this.shapes.length > 0 ){ this.shapes[this.shapes.length-1].selected = true}
           glShapes.render()
       }
     });
