--- a/week5/shapes.html
+++ b/week5/shapes.html
@@ -14,22 +14,23 @@
 
 <link rel="import" href="polymerBS.html">
 
-<body style="background-color:grey;">
+<body style="background-color:black;">
 
 <br>
 <div style="float:right">
-  <div>
+  <div style="position:absolute; right:10px; width:400px; 
+      color: white; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+    <div>
       Cody Smith <br>
       Interactive Computer Graphics with WebGL <br>
       Assignment 3. Shapes<br>
       July 2015 <br>
   </div>
   <br>
-  <div style="width:300px">
   <shape-menu ></shape-menu>
   </div>
 </div>
-<canvas id="gl-canvas" width="800" height="768" style=" border-style: solid; border-width: 5px;">
+<canvas id="gl-canvas" width="800" height="768" style=" border-style: solid; border-width: 1px; border-color: white">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 <br>
