--- a/weekX/hough.html
+++ b/weekX/hough.html
@@ -26,18 +26,29 @@
 <script type="text/javascript">
   window.onload = function() {
     window.sob = new glHough()
+    loadImage("goboard.jpg")
+  }
+
+  function loadImage( url) {
     var img = new Image()
     img.onload = function(){
+      console.time('render')
       sob.changeImage.bind(sob)(this)
       sob.render()
+      console.timeEnd('render')
     }
-    img.src = "goboard.jpg"
+    img.src = url
   }
 
 
 </script>
   
 </div>
+<button onclick="loadImage('goboard.jpg')">goboard.jpg</button>
+<button onclick="loadImage('diags.png')">diags.png</button>
+<button onclick="loadImage('lines.png')">lines.png</button>
+<button onclick="loadImage('verts.png')">verts.png</button>
+<button onclick="loadImage('parking.jpg')">parking.jpg</button>
 <canvas id="gl-canvas" width="800" height="768" style=" border-style: solid; border-width: 5px;">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
