--- a/week5/shapes.html
+++ b/week5/shapes.html
@@ -3,7 +3,7 @@
 
 <title>Shapes</title>
 
-<!--<script src="../Common/analytics.js"></script>-->
+<script src="../Common/analytics.js"></script>
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
