--- a/week6/polymerBS.html
+++ b/week6/polymerBS.html
@@ -17,20 +17,23 @@
           </div>
          </section>
         <ul style="display:{{curr.selected | fooBar}}" >
-          <li>rotation: <input oninput="glShapes.render()" type="range" value="{{curr.rotation}}" min=-360 max=360>
-            {{curr.rotation}}</li>
-          <li>scaleX: <input oninput="glShapes.render()" type="range" value="{{curr.scale[0]}}" min=0.1 max=3 step=0.000001>
-            {{curr.scale[0]}}</li>
-          <li>scaleY: <input oninput="glShapes.render()" type="range" value="{{curr.scale[1]}}" min=0.1 max=3 step=0.000001>
-            {{curr.scale[1]}}</li>
-          <li>scaleZ: <input oninput="glShapes.render()" type="range" value="{{curr.scale[2]}}" min=0.1 max=3 step=0.000001>
-            {{curr.scale[2]}}</li>
-          <li>axisX: <input oninput="glShapes.render()" type="range" value="{{curr.axis[0]}}" min=-1 max=1 step=0.000001>
-            {{curr.axis[0]}}</li>
-          <li>axisY: <input oninput="glShapes.render()" type="range" value="{{curr.axis[1]}}" min=-1 max=1 step=0.000001>
-            {{curr.axis[1]}}</li>
-          <li>axisZ: <input oninput="glShapes.render()" type="range" value="{{curr.axis[2]}}" min=-1 max=1 step=0.000001>
-            {{curr.axis[2]}}</li>
+          <div style="display:{{!curr.isLight | fooBar}}">
+            <li>rotation: <input oninput="glShapes.render()" type="range" value="{{curr.rotation}}" min=-360 max=360>
+              {{curr.rotation}}</li>
+            <li>scaleX: <input oninput="glShapes.render()" type="range" value="{{curr.scale[0]}}" min=0.1 max=3 step=0.000001>
+              {{curr.scale[0]}}</li>
+            <li>scaleY: <input oninput="glShapes.render()" type="range" value="{{curr.scale[1]}}" min=0.1 max=3 step=0.000001>
+              {{curr.scale[1]}}</li>
+            <li>scaleZ: <input oninput="glShapes.render()" type="range" value="{{curr.scale[2]}}" min=0.1 max=3 step=0.000001>
+              {{curr.scale[2]}}</li>
+            <li>axisX: <input oninput="glShapes.render()" type="range" value="{{curr.axis[0]}}" min=-1 max=1 step=0.000001>
+              {{curr.axis[0]}}</li>
+            <li>axisY: <input oninput="glShapes.render()" type="range" value="{{curr.axis[1]}}" min=-1 max=1 step=0.000001>
+              {{curr.axis[1]}}</li>
+            <li>axisZ: <input oninput="glShapes.render()" type="range" value="{{curr.axis[2]}}" min=-1 max=1 step=0.000001>
+              {{curr.axis[2]}}</li>
+          </div>
+          
           <li>centerX: <input oninput="glShapes.render()" type="range" value="{{curr.center[0]}}" min=-10 max=10 step=0.000001>
             {{curr.center[0]}}</li>
           <li>centerY: <input oninput="glShapes.render()" type="range" value="{{curr.center[1]}}" min=-10 max=10 step=0.000001>
@@ -44,7 +47,7 @@
               WireFrame:
               <input onclick="glShapes.render()" type="checkbox" checked="{{curr.wireFrame}}">
           </li>
-          <section on-click={{rmSelected}} descript="{{ curr.name }}">
+          <section on-click={{rmSelected}} descript="{{ curr.name }}" style="display:{{!curr.isLight | fooBar}}">
            <button>remove</button>
          </section>
         </ul>
