--- a/week6/polymerBS.html
+++ b/week6/polymerBS.html
@@ -64,7 +64,7 @@
         this.shapes = glShapes.shapes
       },
       fooBar: function(value) {
-        console.log('value', value)
+        //console.log('value', value)
         if (!value) {
           return "none";
         }
