--- a/week6/polymerBS.html
+++ b/week6/polymerBS.html
@@ -18,34 +18,34 @@
          </section>
         <ul style="display:{{curr.selected | fooBar}}" >
           <div style="display:{{!curr.isLight | fooBar}}">
-            <li>rotation: <input oninput="glShapes.render()" type="range" value="{{curr.rotation}}" min=-360 max=360>
+            <li>rotation: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.rotation}}" min=-360 max=360>
               {{curr.rotation}}</li>
-            <li>scaleX: <input oninput="glShapes.render()" type="range" value="{{curr.scale[0]}}" min=0.1 max=3 step=0.000001>
+            <li>scaleX: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.scale[0]}}" min=0.1 max=3 step=0.000001>
               {{curr.scale[0]}}</li>
-            <li>scaleY: <input oninput="glShapes.render()" type="range" value="{{curr.scale[1]}}" min=0.1 max=3 step=0.000001>
+            <li>scaleY: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.scale[1]}}" min=0.1 max=3 step=0.000001>
               {{curr.scale[1]}}</li>
-            <li>scaleZ: <input oninput="glShapes.render()" type="range" value="{{curr.scale[2]}}" min=0.1 max=3 step=0.000001>
+            <li>scaleZ: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.scale[2]}}" min=0.1 max=3 step=0.000001>
               {{curr.scale[2]}}</li>
-            <li>axisX: <input oninput="glShapes.render()" type="range" value="{{curr.axis[0]}}" min=-1 max=1 step=0.000001>
+            <li>axisX: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.axis[0]}}" min=-1 max=1 step=0.000001>
               {{curr.axis[0]}}</li>
-            <li>axisY: <input oninput="glShapes.render()" type="range" value="{{curr.axis[1]}}" min=-1 max=1 step=0.000001>
+            <li>axisY: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.axis[1]}}" min=-1 max=1 step=0.000001>
               {{curr.axis[1]}}</li>
-            <li>axisZ: <input oninput="glShapes.render()" type="range" value="{{curr.axis[2]}}" min=-1 max=1 step=0.000001>
+            <li>axisZ: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.axis[2]}}" min=-1 max=1 step=0.000001>
               {{curr.axis[2]}}</li>
           </div>
           
-          <li>centerX: <input oninput="glShapes.render()" type="range" value="{{curr.center[0]}}" min=-10 max=10 step=0.000001>
+          <li>centerX: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.center[0]}}" min=-10 max=10 step=0.000001>
             {{curr.center[0]}}</li>
-          <li>centerY: <input oninput="glShapes.render()" type="range" value="{{curr.center[1]}}" min=-10 max=10 step=0.000001>
+          <li>centerY: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.center[1]}}" min=-10 max=10 step=0.000001>
             {{curr.center[1]}}</li>
-          <li>centerZ: <input oninput="glShapes.render()" type="range" value="{{curr.center[2]}}" min=-10 max=10 step=0.000001>
+          <li>centerZ: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.center[2]}}" min=-10 max=10 step=0.000001>
             {{curr.center[2]}}</li>
           <li>
               <!--<template if="{{!curr.wireFrame}}">Wireframe</template>
               <template if="{{curr.wireFrame}}">No Wireframe</template>
               -->
               WireFrame:
-              <input onclick="glShapes.render()" type="checkbox" checked="{{curr.wireFrame}}">
+              <input onclick="glShapes.renderOnce()" type="checkbox" checked="{{curr.wireFrame}}">
           </li>
           <section on-click={{rmSelected}} descript="{{ curr.name }}" style="display:{{!curr.isLight | fooBar}}">
            <button>remove</button>
@@ -80,7 +80,7 @@
               sh.selected = false
             }
           }
-          glShapes.render()
+          glShapes.renderOnce()
       },
       rmSelected: function(e, detail, sender) { 
           var name = sender.getAttribute('descript')
@@ -91,7 +91,7 @@
             }
           }
           if(this.shapes.length > 0 ){ this.shapes[this.shapes.length-1].selected = true}
-          glShapes.render()
+          glShapes.renderOnce()
       }
     });
   </script>
