--- a/week6/shapes.html
+++ b/week6/shapes.html
@@ -24,7 +24,7 @@
     <div>
       Cody Smith <br>
       Interactive Computer Graphics with WebGL <br>
-      Assignment 3. Shapes<br>
+      Assignment 4. Shapes with shading and multiple lights<br>
       July 2015 <br>
   </div>
   <br>
